--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -54,7 +54,7 @@
 
     - name: Add user ec2-user to docker group
       user:
-        name: ec2-ser
+        name: ec2-user
         groups: docker
         append: yes
       become: yes
