--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -4,54 +4,39 @@
   become: yes
 
   tasks:
-    - name: Install yum utils
-      yum:
-        name: yum-utils
-        state: latest
-
-    - name: Install device-mapper-persistent-data
-      yum:
-        name: device-mapper-persistent-data
-        state: latest
-
-    - name: Install iptables
-      yum:
-        name: iptables
-        state: latest
-
-    - name: Install lvm2
-      yum:
-        name: lvm2
-        state: latest
-
-    - name: Install python3
-      yum:
-        name: python3
-        state: latest   
-
-    - name: Install docker pip
-      pip:
-        name: docker
-
-    - name: Add Docker repo
-      get_url:
-        url: https://download.docker.com/linux/centos/docker-ce.repo
-        dest: /etc/yum.repos.d/docer-ce.repo
-      become: yes
-
+    - name: "Update"
+       command: apt -y update
+    - name: "Install Docker"
+       command: pip install docker-py
+    - name: "Update"
+       command: apt -y update
+    - name: "Install" 
+       command: apt -y install apt-transport-https
+    - name: ca-certificates 
+       command: apt -y install ca-certificates 
+    - name: Curl
+       command: apt -y install curl 
+    - name: gnupg 
+       command: apt -y install gnupg 
+    - name: lsb-release
+       command: apt -y install lsb-release
+    - name: Key
+       apt_key: url=https://download.docker.com/linux/ubuntu/gpg
+    - name: Add Docker APT repository
+       apt_repository:
+          repo: deb [arch=amd64] https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable
     - name: Install Docker
-      package:
-        name: docker-ce
-        state: latest
-      become: yes
-
+       command: apt-get -y install docker-ce docker-ce-cli containerd.io
+    - name: Install docker-compose
+       pip:
+         name: docker-compose
     - name: Start Docker service
       service:
         name: docker
         state: started
         enabled: yes
       become: yes
-
+      
     - name: Add user ec2-user to docker group
       user:
         name: ec2-user
