--- a/.github/workflows/mysql.yml
+++ b/.github/workflows/mysql.yml
@@ -1,14 +1,13 @@
 name: 'MySQL'
 
 on:
-  workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'     
-        required: true
-        default: 'warning'
-      tags:
-        description: 'MySQL Import dump'  
+  workflow_run:
+    workflows:
+      - Ansible
+    types: 
+      - completed
+    branches:
+      - main
     
 jobs:
   mysql:
